make watermark text size in all images consistent